--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Buisness website</title>
     <link rel="stylesheet" href="style.css">
 
-    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15/dist/smooth-scroll.polyfills.min.js"></script>
 
 </head>
 
@@ -102,7 +100,7 @@
                         aliquid consectetur unde autem ab et aliquam eum.
                     </p>
                     <button class="common-btn">
-                        View More
+                        View All Courses
                     </button>
 
                     <div class="line">
@@ -172,7 +170,7 @@
 
                     </div>
 
-                    <div class="link-title">
+                    <div class="link-title-ex">
                         <h4>Explore</h4>
                         <small>Find a nonprofit</small><br>
                         <small>Coporate S</small>
@@ -184,7 +182,7 @@
                 <div class="footer-info">
                     <div class="copyright-text">
                         <small>support@xypo.com</small>
-                        <small>copyright 2020 Xypo</small>
+                        <small>Copyright 2020</small>
                     </div>
                     <div class="footer-logo">
                         <img src="img/logo.png" id="lol">
@@ -196,9 +194,7 @@
             </div>
     </section>
 
-    <script>
-       var scroll = new SmoothScroll('a[href*="#"]');
-    </script>
+   
 
 </body>
 
